--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "@types/lodash-es": "^4.17.5",
+    "@types/lodash-es": "^4.17.6",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@types/node": "^17.0.8",
-    "ts-node": "^10.4.0",
-    "typescript": "next"
+    "@types/node": "^17.0.41",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.2.1"
 }
