--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "license": "MIT",
   "type": "module",
+  "scripts": {
+    "preinstall": "npx only-allow pnpm"
+  },
   "dependencies": {
-    "@types/lodash-es": "^4.17.6",
+    "@types/lodash-es": "^4.17.7",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@types/node": "^17.0.41",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
-  },
-  "packageManager": "yarn@3.2.1"
+    "@types/node": "^20.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
+  }
 }
